Added index (landing) page, css layout, to check if it works

--- a/index.html
+++ b/index.html
@@ -1,1 +1,177 @@
-Hello World!
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!--
+Template Name: Corporation
+Author: <a href="http://www.os-templates.com/">OS Templates</a>
+Author URI: http://www.os-templates.com/
+Licence: Free to use under our free template licence terms
+Licence URI: http://www.os-templates.com/template-terms
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Daniel T. Citron | Cornell University Physics </title>
+
+<!--google analytics script -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  
+  ga('create', 'UA-58110355-1', 'auto');
+  ga('send', 'pageview');
+</script>
+
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<link rel="stylesheet" href="layout/styles/layout.css" type="text/css" />
+</head>
+<body id="top">
+<div class="wrapper col1">
+  <div id="head">
+    <h1><a href="index.html">Daniel T. Citron</a></h1>
+    <p>PhD Candidate, Cornell University Physics</p>
+    <div id="topnav">
+      <ul>
+        <li><a class="active" href="index.html">About Me</a></li>
+        <li><a href="pages/research.html">Projects</a></li>
+        <li><a href="pages/teaching.html">Teaching</a></li>
+        <li><a href="pages/other.html">Other</a></li>
+ <!--
+        <li><a href="#">DropDown</a>
+          <ul>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+          </ul>
+        </li>
+        <li class="last"><a href="#">A Long Link Text</a></li>
+      </ul>
+    </div>
+-->
+<!--
+    <div id="search">
+      <form action="#" method="post">
+        <fieldset>
+          <legend>Site Search</legend>
+          <input type="submit" name="go" id="go" value="GO" />
+          <input type="text" value="Search the site&hellip;"  onfocus="this.value=(this.value=='Search the site&hellip;')? '' : this.value ;" />
+        </fieldset>
+      </form>
+    </div>
+-->
+  </div>
+</div>
+<!-- ### This is the part where we have a nifty photo stream, will edit later -->
+<!--
+<div class="wrapper col2">
+  <div id="gallery">
+    <ul>
+      <li class="placeholder" style="background-image:url(images/demo/gallery_default.gif);">Image Holder</li>
+      <li><a class="swap" style="background-image:url(images/demo/290x105.gif);" href="#gallery"><strong>Services</strong><span><img src="images/demo/gallery_1.gif" alt="" /></span></a></li>
+      <li><a class="swap" style="background-image:url(images/demo/290x105.gif);" href="#gallery"><strong>Products</strong><span><img src="images/demo/gallery_2.gif" alt="" /></span></a></li>
+      <li class="last"><a class="swap" style="background-image:url(images/demo/290x105.gif);" href="#gallery"><strong>Company</strong><span><img src="images/demo/gallery_3.gif" alt="" /></span></a></li>
+    </ul>
+    <div class="clear"></div>
+  </div>
+</div>
+-->
+
+<div class="wrapper col4">
+  <div id="container">
+    <div id="content">
+      <h1>About Me</h1>
+      <p> I am a PhD candidate in the field of Physics at Cornell University.  My academic interests are predominantly related to computational science and the study of complex networks. </p>
+      <p>My committee chair at Cornell is <a href="http://cbsu.tc.cornell.edu/staff/myers/">Christopher R. Myers</a>, who has an interest in dynamics on complex networks and modeling infectious diseases.  My work in the Myers group has focused on creating stochastic simulations of infectious disease dynamics and understanding how a heterogeneous contact network affects (limits or enhances) how disease spreads through a population. </p>
+      <p> I have also done worked with Paul Ginsparg to try to understand and analyze publishing data taken from <a href="http://www.arxiv.org">the arXiv</a>.  We have looked into the problem of authors re-using text from their own work or from other sources.  We have also explored a number of methods for detecting the formation of new sub-disciplines of science based on data taken from the collaboration networks of co-authors and the textual data taken from arXiv articles.</p>
+      <p> You can read more about my research projects <a href = "pages/research.html"><b>here &raquo;</b></a>. </p>
+      <p>In 2012 I was awarded a National Science Foundation GRFP Fellowship. </p>
+      <p>Please feel free to contact me if you have any questions: <b>
+        <script language="JavaScript">
+          var username = "dtc65";
+          var hostname = "cornell.edu";
+          var linktext = username + "@" + hostname ;
+          document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b></p>
+      <h1>Current CV</h1>
+      <p class="readmore"><a href = "DTCitron_CV.pdf" alt="">  View my current CV <b> here &raquo; </b></a> </p>
+      <p class="readmore"><a href = "http://linkedin.com/pub/daniel-citron" alt="">  LinkedIn profile <b> here &raquo; </b></a> </p>      
+      <h1>Code for Simulations</h1>
+      <p class="readmore"><a href = "https://github.com/dtcitron" alt="">  GitHub repository <b> here &raquo; </b></a> </p>
+      <p></p>
+    </div>
+<!-- ### Create columns with previews of stuff -->
+<!--
+      <div class="homecontent">
+        <ul>
+          <li>
+            <p class="imgholder"><img src="images/demo/286x100.gif" alt="" /></p>
+            <h2>Indonectetus facilis leo nibh</h2>
+            <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque.</p>
+            <p>congue magnis vestibulum quismodo nulla et feugiat. Adipisciniapellentum leo ut consequam ris felit elit id nibh sociis malesuada.</p>
+            <p class="readmore"><a href="#">Read More &raquo;</a></p>
+          </li>
+          <li class="last">
+            <p class="imgholder"><img src="images/demo/286x100.gif" alt="" /></p>
+            <h2>Indonectetus facilis leo nibh</h2>
+            <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
+            <p>Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat. Adipisciniapellentum leo ut consequam ris felit elit id nibh sociis malesuada.</p>
+            <p class="readmore"><a href="#">Read More &raquo;</a></p>
+          </li>
+        </ul>
+        <div class="clear"></div>
+      </div>
+-->
+
+<!-- ### Here's a column -->
+    <div id="column">
+      <div class = "holder">
+        <div class = "imgholder"><img src = "images/me.jpeg" alt="" />
+        </div>
+      </div>
+      <!--
+      <div id="featured">
+        <ul>
+          <li>
+            <p class="readmore"><a href = "DTCitron_CV.pdf" alt="">  <b> View my current CV here &raquo; </b></a> </p>
+          </li>
+          <li>
+            <p class="readmore"><a href = "http://linkedin.com/pub/daniel-citron" alt="">  <b> My LinkedIn profile here &raquo; </b></a> </p>
+          </li>
+                    <li>
+            <p class="readmore"><a href = "https://github.com/dtcitron" alt="">  <b> My GitHub repository here &raquo; </b></a> </p>
+          </li>
+        </ul>
+      </div>
+      -->
+
+    </div>
+    <div class="clear"></div>
+  </div>
+</div>
+
+  
+<!-- ### Put contact information here -->
+<div class="wrapper col5">
+  <div id="footer">
+      <div id="compdetails">
+      <div id="contactdetails">
+        <h2>Contact Details</h2>
+        <ul>
+          <li>Cornell University Department of Physics</li>
+          <li>Clark Hall</li>
+          <li>Ithaca, NY 14853</li>
+          <li><b>Email Me: 
+            <script language="JavaScript">
+            var username = "dtc65";
+            var hostname = "cornell.edu";
+            var linktext = username + "@" + hostname ;
+            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
+          </li>
+        </ul>
+      </div>
+      <div class="clear"></div>
+    </div>
+
+    <div class="clear"></div>
+  </div>
+</div>
+</body>
+</html>
