Altered picture of self

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ### Here's a column -->
     <div id="column">
       <div class = "holder">
-        <div class = "imgholder"><img src = "images/me.jpeg" alt="" />
+        <div class = "imgholder"><img src = "images/me.pdf" alt="" />
         </div>
       </div>
       <!--
