Adjusted VonC page to download zipped file

--- a/pages/VonClownstick/vonclownstick.html
+++ b/pages/VonClownstick/vonclownstick.html
@@ -27,34 +27,11 @@ Licence URI: http://www.os-templates.com/template-terms
 <body id="top">
 <div class="wrapper col1">
   <div id="head">
-<!--
-    <h1><a href="../index.html">Daniel T. Citron</a></h1>
-    <p>PhD Candidate, Cornell University Physics</p>
-    <div id="topnav">
-      <ul>
-        <li><a href="../index.html">About Me</a></li>
-        <li><a href="research.html">Projects</a></li>
-        <li><a href="teaching.html">Teaching</a></li>
-        <li><a class="active" href="other.html">Other</a></li>
--->
+
     </div>
   </div>
 </div>
-<!--
-<div class="wrapper col2">
-  <div id="breadcrumb">
-    <ul>
-      <li class="first">You Are Here</li>
-      <li>&#187;</li>
-      <li><a href="../index.html">Home</a></li>
-      <li>&#187;</li>
-      <li><a href="other.html">Other</a></li>
-      <li>&#187;</li>
-      <li class="current"><a href="mtgprices.html"><i>Magic: the Gathering</i>&trade; Card Price Distribution</a></li>
-    </ul>
-  </div>
-</div>
--->
+
 <div class="wrapper col4">
   <div id="container">
     <div id="content">
@@ -114,9 +91,9 @@ browser, open a new tab and open "Extensions" under the Window menu.  Drag and d
 .crx file into your list of extensions.
 </p>
 
-<h2>  <a href="VonClownstick.safariextension" target="_blank"> Safari Version </a> </h2>
-<p> Click on the link above to download a folder titled "VonClownstick.safariextension." 
-Open Safari, and select "Extensions" that appears in the "Develop" window.
+<h2>  <a href="VonClownstick.zip" target="_blank"> Safari Version </a> </h2>
+<p> Click on the link above to download a folder titled "VonClownstick.zip."  Unzip the 
+folder, then open Safari and select "Extensions" that appears in the "Develop" window.
 (Enable the "Develop" window by checking "Show Develop menu in menu bar" under "Advanced"
 in Safari's Preferences.) Click on the "+" icon that appears in the lower left corner, 
 select "Add Extension," and select "VonClownstick.safariextension" from your Downloads 
@@ -134,20 +111,7 @@ close Safari, you will need to re-install the extension.)
   <div id="footer">
       <div id="compdetails">
       <div id="contactdetails">
-<!--        <h2>Contact Details</h2>
-        <ul>
-          <li>Cornell University Department of Physics</li>
-          <li>Clark Hall</li>
-          <li>Ithaca, NY 14853</li>
-          <li><b>Email Me: 
-            <script language="JavaScript">
-            var username = "dtc65";
-            var hostname = "cornell.edu";
-            var linktext = username + "@" + hostname ;
-            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
-          </li>
-        </ul>
--->
+
       </div>
       <div class="clear"></div>
     </div>
