partial updates of index page, trying to edit errors for cross-browser consistency

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@ Licence URI: http://www.os-templates.com/template-terms
 <link rel="stylesheet" href="layout/styles/layout.css" type="text/css" />
 </head>
 <body id="top">
-<div class="wrapper col1">
-  <div id="head">
-    <h1><a href="index.html">Daniel T. Citron</a></h1>
-    <p>PhD Candidate, Cornell University Physics</p>
-    <div id="topnav">
-      <ul>
-        <li><a class="active" href="index.html">About Me</a></li>
-        <li><a href="pages/research.html">Projects</a></li>
-        <li><a href="pages/teaching.html">Teaching</a></li>
-        <li><a href="pages/other.html">Other</a></li>
+  <div class="wrapper col1">
+    <div id="head">
+      <h1><a href="index.html">Daniel T. Citron</a></h1>
+      <p>PhD Candidate, Cornell University Physics</p>
+      <div id="topnav">
+        <ul>
+          <li><a class="active" href="index.html">About Me</a></li>
+          <li><a href="pages/research.html">Projects</a></li>
+          <li><a href="pages/teaching.html">Teaching</a></li>
+          <li><a href="pages/other.html">Other</a></li>
+        </ul>
+      </div>
  <!--
         <li><a href="#">DropDown</a>
           <ul>
@@ -43,10 +45,7 @@ Licence URI: http://www.os-templates.com/template-terms
             <li><a href="#">Link 3</a></li>
           </ul>
         </li>
-        <li class="last"><a href="#">A Long Link Text</a></li>
-      </ul>
-    </div>
--->
+        <li class="last"><a href="#">A Long Link Text</a></li>-->
 <!--
     <div id="search">
       <form action="#" method="post">
@@ -58,8 +57,8 @@ Licence URI: http://www.os-templates.com/template-terms
       </form>
     </div>
 -->
+    </div>
   </div>
-</div>
 <!-- ### This is the part where we have a nifty photo stream, will edit later -->
 <!--
 <div class="wrapper col2">
@@ -75,28 +74,32 @@ Licence URI: http://www.os-templates.com/template-terms
 </div>
 -->
 
-<div class="wrapper col4">
-  <div id="container">
-    <div id="content">
-      <h1>About Me</h1>
-      <p> I am a PhD candidate in the field of Physics at Cornell University.  My academic interests are predominantly related to computational science and the study of complex networks. </p>
-      <p>My committee chair at Cornell is <a href="http://cbsu.tc.cornell.edu/staff/myers/">Christopher R. Myers</a>, who has an interest in dynamics on complex networks and modeling infectious diseases.  My work in the Myers group has focused on creating stochastic simulations of infectious disease dynamics and understanding how a heterogeneous contact network affects (limits or enhances) how disease spreads through a population. </p>
-      <p> I have also done worked with Paul Ginsparg to try to understand and analyze publishing data taken from <a href="http://www.arxiv.org">the arXiv</a>.  We have looked into the problem of authors re-using text from their own work or from other sources.  We have also explored a number of methods for detecting the formation of new sub-disciplines of science based on data taken from the collaboration networks of co-authors and the textual data taken from arXiv articles.</p>
-      <p> You can read more about my research projects <a href = "pages/research.html"><b>here &raquo;</b></a>. </p>
-      <p>In 2012 I was awarded a National Science Foundation GRFP Fellowship. </p>
-      <p>Please feel free to contact me if you have any questions: <b>
-        <script language="JavaScript">
-          var username = "dtc65";
-          var hostname = "cornell.edu";
-          var linktext = username + "@" + hostname ;
-          document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b></p>
-      <h1>Current CV</h1>
-      <p class="readmore"><a href = "DTCitron_CV.pdf" alt="">  View my current CV <b> here &raquo; </b></a> </p>
-      <p class="readmore"><a href = "http://linkedin.com/pub/daniel-citron" alt="">  LinkedIn profile <b> here &raquo; </b></a> </p>      
-      <h1>Code for Simulations</h1>
-      <p class="readmore"><a href = "https://github.com/dtcitron" alt="">  GitHub repository <b> here &raquo; </b></a> </p>
-      <p></p>
-    </div>
+  <div class="wrapper col4">
+    <div id="container">
+      <div id="content">
+        <h1>About Me</h1>
+        <p> I am a PhD candidate in the field of Physics at Cornell University.  My academic interests are predominantly related to computational science and the study of complex networks. </p>
+        <p>My committee chair at Cornell is <a href="http://cbsu.tc.cornell.edu/staff/myers/">Christopher R. Myers</a>, who has an interest in dynamics on complex networks and modeling infectious diseases.  My work in the Myers group has focused on creating stochastic simulations of infectious disease dynamics and understanding how a heterogeneous contact network affects (limits or enhances) how disease spreads through a population. </p>
+        <p> I have also done worked with Paul Ginsparg to try to understand and analyze publishing data taken from <a href="http://www.arxiv.org">the arXiv</a>.  We have looked into the problem of authors re-using text from their own work or from other sources.  We have also explored a number of methods for detecting the formation of new sub-disciplines of science based on data taken from the collaboration networks of co-authors and the textual data taken from arXiv articles.</p>
+        <p> You can read more about my research projects <a href = "pages/research.html"><b>here &raquo;</b></a>. </p>
+        <p>In 2012 I was awarded a National Science Foundation GRFP Fellowship. </p>
+        <p>Please feel free to contact me if you have any questions: 
+          <b>
+          <script language="JavaScript">
+            var username = "dtc65";
+            var hostname = "cornell.edu";
+            var linktext = username + "@" + hostname ;
+            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); 
+          </script>
+          </b>
+        </p>
+        <h1>Current CV</h1>
+        <p class="readmore"><a href = "DTCitron_CV.pdf">  View my current CV <b> here &raquo; </b></a> </p>
+        <p class="readmore"><a href = "http://linkedin.com/pub/daniel-citron">  LinkedIn profile <b> here &raquo; </b></a> </p>      
+        <h1>Code for Simulations</h1>
+        <p class="readmore"><a href = "https://github.com/dtcitron">  GitHub repository <b> here &raquo; </b></a> </p>
+        <p></p>
+      </div>
 <!-- ### Create columns with previews of stuff -->
 <!--
       <div class="homecontent">
@@ -121,11 +124,11 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 
 <!-- ### Here's a column -->
-    <div id="column">
-      <div class = "holder">
-        <div class = "imgholder"><img src = "images/me.pdf" alt="" />
+      <div id="column">
+        <div class = "holder">
+          <div class = "imgholder"><img src = "images/me.pdf" alt="" />
+          </div>
         </div>
-      </div>
       <!--
       <div id="featured">
         <ul>
@@ -141,9 +144,9 @@ Licence URI: http://www.os-templates.com/template-terms
         </ul>
       </div>
       -->
-
+      </div>
+      <div class="clear"></div>
     </div>
-    <div class="clear"></div>
   </div>
 </div>
 
@@ -172,6 +175,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
     <div class="clear"></div>
   </div>
+</div>
 </div>
 </body>
 </html>
