Added script type tags for javascript in index.html

--- a/pages/VonClownstick/vonclownstick.html
+++ b/pages/VonClownstick/vonclownstick.html
@@ -62,7 +62,7 @@ Elect simultaneously revealed his fragility and complete lack of a sense of humo
 
 <div class = "holder">
     <center>
-    <div class = "imgholder"><img src = "../../images/whatsfunny.pdf" alt="Click to enlarge" width="90%" align="center"/>
+    <div class = "imgholder"><img src = "../../images/whatsfunny.pdf" alt="What's funny?" width="90%" align="center"/>
     </div>
     </center>
 </div>
