--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <title>Daniel T. Citron | Cornell University Physics </title>
 
 <!--google analytics script -->
-<script>
+<script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -85,7 +85,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <p>In 2012 I was awarded a National Science Foundation GRFP Fellowship. </p>
         <p>Please feel free to contact me if you have any questions: 
           <b>
-          <script language="JavaScript">
+          <script type="text/javascript">
             var username = "dtc65";
             var hostname = "cornell.edu";
             var linktext = username + "@" + hostname ;
@@ -148,7 +148,6 @@ Licence URI: http://www.os-templates.com/template-terms
       <div class="clear"></div>
     </div>
   </div>
-</div>
 
   
 <!-- ### Put contact information here -->
@@ -162,7 +161,7 @@ Licence URI: http://www.os-templates.com/template-terms
           <li>Clark Hall</li>
           <li>Ithaca, NY 14853</li>
           <li><b>Email Me: 
-            <script language="JavaScript">
+            <script type="text/javascript">
             var username = "dtc65";
             var hostname = "cornell.edu";
             var linktext = username + "@" + hostname ;
@@ -175,7 +174,6 @@ Licence URI: http://www.os-templates.com/template-terms
 
     <div class="clear"></div>
   </div>
-</div>
 </div>
 </body>
 </html>
