--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <title>Daniel T. Citron | Cornell University Physics </title>
 
 <!--google analytics script -->
-<script type="text/javascript">
+<!--<script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -20,6 +20,7 @@ Licence URI: http://www.os-templates.com/template-terms
   ga('create', 'UA-58110355-1', 'auto');
   ga('send', 'pageview');
 </script>
+-->
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="layout/styles/layout.css" type="text/css" />
@@ -85,12 +86,13 @@ Licence URI: http://www.os-templates.com/template-terms
         <p>In 2012 I was awarded a National Science Foundation GRFP Fellowship. </p>
         <p>Please feel free to contact me if you have any questions: 
           <b>
-          <script type="text/javascript">
+<!--          <script type="text/javascript">
             var username = "dtc65";
             var hostname = "cornell.edu";
             var linktext = username + "@" + hostname ;
             document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); 
           </script>
+-->
           </b>
         </p>
         <h1>Current CV</h1>
@@ -160,12 +162,15 @@ Licence URI: http://www.os-templates.com/template-terms
           <li>Cornell University Department of Physics</li>
           <li>Clark Hall</li>
           <li>Ithaca, NY 14853</li>
-          <li><b>Email Me: 
-            <script type="text/javascript">
-            var username = "dtc65";
-            var hostname = "cornell.edu";
-            var linktext = username + "@" + hostname ;
-            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
+          <li>
+            <b>Email Me: 
+<!--            <script type="text/javascript">
+              var username = "dtc65";
+              var hostname = "cornell.edu";
+              var linktext = username + "@" + hostname ;
+              document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); 
+            </script> -->
+            </b>
           </li>
         </ul>
       </div>
