--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <title>Daniel T. Citron | Cornell University Physics </title>
 
 <!--google analytics script -->
-<!--<script type="text/javascript">
+<script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -20,7 +20,6 @@ Licence URI: http://www.os-templates.com/template-terms
   ga('create', 'UA-58110355-1', 'auto');
   ga('send', 'pageview');
 </script>
--->
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="layout/styles/layout.css" type="text/css" />
@@ -86,13 +85,12 @@ Licence URI: http://www.os-templates.com/template-terms
         <p>In 2012 I was awarded a National Science Foundation GRFP Fellowship. </p>
         <p>Please feel free to contact me if you have any questions: 
           <b>
-<!--          <script type="text/javascript">
+          <script type="text/javascript">
             var username = "dtc65";
             var hostname = "cornell.edu";
             var linktext = username + "@" + hostname ;
             document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); 
           </script>
--->
           </b>
         </p>
         <h1>Current CV</h1>
@@ -128,7 +126,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ### Here's a column -->
       <div id="column">
         <div class = "holder">
-          <div class = "imgholder"><img src = "images/me.pdf" alt="" />
+          <div class = "imgholder"><img src = "images/me.jpeg" alt="" />
           </div>
         </div>
       <!--
@@ -164,12 +162,12 @@ Licence URI: http://www.os-templates.com/template-terms
           <li>Ithaca, NY 14853</li>
           <li>
             <b>Email Me: 
-<!--            <script type="text/javascript">
+            <script type="text/javascript">
               var username = "dtc65";
               var hostname = "cornell.edu";
               var linktext = username + "@" + hostname ;
               document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); 
-            </script> -->
+            </script>
             </b>
           </li>
         </ul>
