Changed embedded pdfs to jpegs, for cross-browser compatibility

--- a/pages/VonClownstick/vonclownstick.html
+++ b/pages/VonClownstick/vonclownstick.html
@@ -62,7 +62,7 @@ Elect simultaneously revealed his fragility and complete lack of a sense of humo
 
 <div class = "holder">
     <center>
-    <div class = "imgholder"><img src = "../../images/whatsfunny.pdf" alt="What's funny?" width="90%" align="center"/>
+    <div class = "imgholder"><img src = "../../images/whatsfunny.jpeg" alt="What's funny?" width="90%" align="center"/>
     </div>
     </center>
 </div>
@@ -79,7 +79,7 @@ less dire, but at the very least it now looks as bizarre as it feels.
 <div class = "holder">
     <center>
     <a href = "../../images/vonclownstick.pdf">
-      <div class = "imgholder"><img src = "../../images/vonclownstick.pdf" alt="Click to enlarge" width="90%" align="center"/>
+      <div class = "imgholder"><img src = "../../images/vonclownstick.jpeg" alt="Click to enlarge" width="90%" align="center"/>
       </div>
     </a>
     </center>
