Fixed hyperlink to CV

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </b>
         </p>
         <h1>Current CV</h1>
-        <p class="readmore"><a href = "DTCitron_CV.pdf">  View my current CV <b> here &raquo; </b></a> </p>
+        <p class="readmore"><a href = "pages/DTCitron_CV.pdf">  View my current CV <b> here &raquo; </b></a> </p>
         <p class="readmore"><a href = "http://linkedin.com/pub/daniel-citron">  LinkedIn profile <b> here &raquo; </b></a> </p>      
         <h1>Code for Simulations</h1>
         <p class="readmore"><a href = "https://github.com/dtcitron">  GitHub repository <b> here &raquo; </b></a> </p>
