Updated GREPrep page, with new slides and short course description

--- a/index.html
+++ b/index.html
@@ -78,9 +78,21 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="container">
       <div id="content">
         <h1>About Me</h1>
-        <p> I am a PhD candidate in the field of Physics at Cornell University.  My academic interests are predominantly related to computational science and the study of complex networks. </p>
-        <p>My committee chair at Cornell is <a href="http://cbsu.tc.cornell.edu/staff/myers/">Christopher R. Myers</a>, who has an interest in dynamics on complex networks and modeling infectious diseases.  My work in the Myers group has focused on creating stochastic simulations of infectious disease dynamics and understanding how a heterogeneous contact network affects (limits or enhances) how disease spreads through a population. </p>
-        <p> I have also done worked with Paul Ginsparg to try to understand and analyze publishing data taken from <a href="http://www.arxiv.org">the arXiv</a>.  We have looked into the problem of authors re-using text from their own work or from other sources.  We have also explored a number of methods for detecting the formation of new sub-disciplines of science based on data taken from the collaboration networks of co-authors and the textual data taken from arXiv articles.</p>
+        <p> I am a PhD candidate in the field of Physics at Cornell University.  My 
+        academic interests are predominantly related to computational science and the 
+        study of complex networks. </p>
+        <p>My committee chair at Cornell is <a href="http://cbsu.tc.cornell.edu/staff/myers/">
+        Christopher R. Myers</a>, who has an interest in dynamics on complex networks and 
+        modeling infectious diseases.  My work in the Myers group has focused on creating 
+        stochastic simulations of infectious disease dynamics and understanding how a 
+        heterogeneous contact network affects (limits or enhances) how disease spreads 
+        through a population. </p>
+        <p> I have also done worked with Paul Ginsparg to try to understand and analyze 
+        publishing data taken from <a href="http://www.arxiv.org">the arXiv</a>.  We have 
+        looked into the problem of authors re-using text from their own work or from other 
+        sources.  We have also explored a number of methods for detecting the formation of 
+        new sub-disciplines of science based on data taken from the collaboration networks 
+        of co-authors and the textual data taken from arXiv articles.</p>
         <p> You can read more about my research projects <a href = "pages/research.html"><b>here &raquo;</b></a>. </p>
         <p>In 2012 I was awarded a National Science Foundation GRFP Fellowship. </p>
         <p>Please feel free to contact me if you have any questions: 
