--- a/pages/teaching.html
+++ b/pages/teaching.html
@@ -41,51 +41,14 @@ Licence URI: http://www.os-templates.com/template-terms
   </div>
 </div>
 
+
 <div class="wrapper col4">
   <div id="container">
     <div id ="content">
-      <h1>Physics GRE Subject Test Prep</h1>
-      <p>For the past three years, I have been organizing and teaching a short preparatory course on the Physics GRE Subject Test.  The course is intended for third- or fourth-year undergraduates who are interested in applying for graduate school in physics.  The course includes a review of topics from undergraduate physics as well as time-saving strategies for approaching problems on the test. </p>
-      <p> <b> Spring 2016 Semester Slides </b> </p>
-      <ul>
-        <li> <a href = "../teachingslides/GRE_Prep_Day_1_2016.pdf" > <b> Day 1 (2/23/16) </b> </a> : Introduction to the test and some problem solving tricks </li>
-        <li> <a href = "../teachingslides/GRE_Prep_Day_2_2016.pdf" > <b> Day 2 (3/1/16) </b> </a> : Review practice test, Atomic Physics </li>
-        <li> <a href = "../teachingslides/GRE_Prep_Day_3_2016.pdf" ><b> Day 3 (3/8/16) </b> </a> : Statistical Mechanics, Receive new practice test</li>
-        <li> <a href = "../teachingslides/GRE_Prep_Day_4_2016.pdf" ><b> Day 4 (3/15/16) </b></a> : Circuits, Optics </li>
-        <li> <a href = "../teachingslides/GRE_Prep_Day_5_2016.pdf" ><b> Day 5 (3/22/16) </b></a> : Diffraction and Interference Patterns; Making Difficult Problems Easy; Pass out extra practice tests </li>
-      </ul>
-      <p> <b> Spring 2015 Semester Slides </b> </p>
-      <ul>
-        <li> <a href = "../teachingslides/GRE_Prep_Day_1_2015.pdf" > <b> Day 1 </b> </a> : Introduction to the test and problem solving tricks </li>
-        <li> <b> Day 1a </b> : Review <a href = "http://www.ets.org/s/gre/pdf/practice_book_physics.pdf" > ETS practice test </a> </li>
-        <li> <a href = "../teachingslides/GRE_Prep_Day_2_2015.pdf" > <b> Day 2 </b> </a> : Statistical Mechanics; Blackbody Radiation </li>
-        <li> <a href = "../teachingslides/GRE_Prep_Day_3_2015.pdf" > <b> Day 3 </b> </a> : Thermodynamics</li>
-        <li> <a href = "../teachingslides/GRE_Prep_Day_4_2015.pdf" > <b> Day 4 </b> </a> : Special Topics: Atomic Physics; Particle Physics; Nuclear Physics; Overview of other advanced topics </li>
-        <li> <a href = "../teachingslides/GRE_Prep_Day_5_2015.pdf" > <b> Day 5 </b> </a> : Example problems: making difficult problems easier </li>
-        <li> <a href = "../teachingslides/GRE_Prep_To_Study.pdf" > <b> Essentials </b> </a> : A list of basic topics to study that very often show up in various forms on the Physics GRE.  You have no excuse to sit the test without reviewing the topics listed here. </li>
-      </ul>
-      <p> Below is the curriculum and slides for the version of the course that was taught in the Spring semester of 2014. </p>
-      <ul>
-        <li> <a href = "../teachingslides/GRE_Prep_Day1_2014.pdf" > <b>Lecture 1</b> </a> : Introduction to the test and problem solving tricks </li>
-        <li> <a href = "../teachingslides/GRE_Prep_Day2_2014.pdf" > <b>Lecture 2</b> </a> : Statistical Mechanics and Thermodynamics </li>
-        <li> <a href = "../teachingslides/GRE_Prep_Day3_2014.pdf" > <b>Lecture 3</b> </a> : Optics, Diffraction, Waves </li>
-        <li> <a href = "../teachingslides/GRE_PREP_Day4_2014.pdf" > <b>Lecture 4</b> </a> : Atomic and Particle Physics </li>
-        <li> <a href = "../teachingslides/GRE_PREP_Day5_2014.pdf" > <b>Lecture 5</b> </a> : Circuits, Nuclear Physics, Special Relativity </li>
-        <li> <a href = "../teachingslides/GRE_PREP_Day6_2014.pdf" > <b>Lecture 6</b> </a> : Making Difficult Problems Easy </li>
-      </ul> 
-      <p> In addition to reviewing the slides, I recommend sitting down and taking practice tests in real time (at 8:30 AM on a Saturday morning) to get a feel for what it's like to actually take the Physics GRE.  You can find four practice tests (real tests from past years) <a href = "http://www.physics.ohio-state.edu/undergrad/ugs_gre.php"> <b>here</b> at the Ohio State SPS GRE prep website</a> or by using your favorite search engine.  The practice exams include answer sheets and rubrics for determining your final score.</p>
-      <p> <a href = "http://www.ets.org/gre/subject/about/content/physics" > <b>The official ETS website</b> </a> contains a lot of basic information about the format of the Physics GRE test.  They also provide you with a fifth practice test. </p>
-      <p>Some additional study resources include the <a href = "http://www.physics.ohio-state.edu/undergrad/ugs_gre.php"><b>Ohio State SPS website</b></a> (which includes practice problem sets with solutions) and <a href = "http://grephysics.net/ans/"><b>GREPhysics.net</b></a> (which has not been updated in years but does contain worked solutions to all problems from four of the practice exams). </p>
-    
-      <h1>Teaching Assistantships</h1>
-      <p> I have worked as a teaching assistant for a number of physics courses at Cornell University: 
-      <ul>
-        <li>Laboratory Teaching Assistant, Physics II: Electricity and Magnetism (for majors), Fall 2014</li>
-        <li>Teaching Assistant, Physics II: Electricity and Magnetism, Spring 2012</li>
-        <li>Teaching Assistant, Physics I: Mechanics and Heat, Fall 2011</li>
-      </ul>
+<!-- ### Teaching portfolio -->
+      <h1> <b> Teaching Portfolio </b> </h1>
+      <p>(Coming soon)</p>
     </div>    
-
 <!-- ### Here's a column -->
     <div id="column">
       <div class = "holder">
@@ -93,9 +56,35 @@ Licence URI: http://www.os-templates.com/template-terms
         </div>
       </div>
       <div id="featured">
-        <p> Helping fifth graders and kindergarteners make liquid nitrogen ice cream, as part of Cornell Center for Materials Research outreach.</p>
+        <p> Helping fifth graders and kindergarteners make liquid nitrogen ice cream, as 
+        part of Cornell Center for Materials Research outreach.</p>
       </div>
     </div>
+<!-- ### GRE Stuff -->
+    <div id="content">
+      <h1> <a href="greprep.html"> <b> Physics GRE Subject Test Prep </b> </a> </h1>
+      <p>For the past three years, I have organized and taught a short preparatory 
+      course on the Physics GRE Subject Test.  The course is intended for third- or 
+      fourth-year undergraduates who are interested in applying for graduate school in 
+      physics, and includes a review of topics from undergraduate physics as well 
+      as time-saving strategies for approaching problems on the test. </p>
+      <p>Click <a href="greprep.html"> here </a> to find all of the materials one needs to
+      prepare for the Physics GRE Subject Test. </p>
+    </div>
+<!-- ### CV: past teaching assistantships -->
+    <div id="content">
+      <h1><b>Teaching Assistantships</b></h1>
+      <p> I have worked as a teaching assistant for a number of physics courses at 
+      Cornell University: 
+      <ul>
+        <li>TA, Physics II: Electricity and Magnetism (for majors), Spring 2016</li>
+        <li>TA, Physics I: Mechanics and Special Relativity (for majors), Fall 2015</li>
+        <li>TA, Physics II: Electricity and Magnetism, Spring 2012</li>
+        <li>TA, Physics I: Mechanics and Heat, Fall 2011</li>
+      </ul>
+      </p>
+    </div>    
+
     <div class="clear"></div>
   </div>
 </div>
