Preliminary Reorganization, reformatting other.html

--- a/pages/greprep.html
+++ b/pages/greprep.html
@@ -34,6 +34,8 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="topnav">
       <ul>
         <li><a href="../index.html">About Me</a></li>
+
+
         <li><a href="research.html">Projects</a></li>
         <li><a class="active" href="teaching.html">Teaching</a></li>
         <li><a href="other.html">Other</a></li>
@@ -41,6 +43,17 @@ Licence URI: http://www.os-templates.com/template-terms
   </div>
 </div>
 
+<div class="wrapper col2">
+  <div id="breadcrumb">
+    <ul>
+      <li class="first"><a href="../index.html">Home</a></li>
+      <li>&#187;</li>
+      <li><a href="teaching.html">Teaching</a></li>
+      <li>&#187;</li>
+      <li class="current"><a href="greprep.html">Physics GRE Prep</a></li>
+    </ul>
+  </div>
+</div>
 
 <div class="wrapper col4">
   <div id="container">
