--- a/pages/other.html
+++ b/pages/other.html
@@ -33,7 +33,12 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="topnav">
       <ul>
         <li><a href="../index.html">About Me</a></li>
-        <li><a href="research.html">Projects</a></li>
+        <li><a href="research.html">Research</a>
+          <ul>
+            <li><a href="research.html#dynamics">Dynamical Processes on Networks</a></li>
+            <li><a href="research.html#structure">Structural Analysis of Networks</a></li>
+          </ul>
+        </li>
         <li><a href="teaching.html">Teaching</a></li>
         <li><a class="active" href="other.html">Other</a></li>
     </div>
@@ -44,16 +49,36 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper col4">
   <div id="container">
     <div id="content">
-      <h1>Eclectic Ephemera of Note</h1>
-      <p><b>The Physics Virtuosi</b></p>
-      <p>I have written a few articles for the Cornell Physics Department's unofficial Graduate Student Blog <a href="http://thephysicsvirtuosi.com/">The Physics Virtuosi</a>.  This includes an article discussing <a href="http://thephysicsvirtuosi.com/posts/re-evaluating-the-values-of-the-tiles-in-scrabble.html">re-evaluation of the points values for tiles in Scrabble</a>. (Note: those calculations were performed using the then-current  American tournament official word list OWL2 and not the now-current OWL3.) </p>
-      <p> </p>
+	  <h1 id="sideprojects"><b>Data Projects</b></h1>
+	  <p><b>Do Movie Ratings Matter?</b></p>
+	  <p><b>Price Distributions of Trading Cards</b></p>
+	  <p><b>Re-evaluating the Points Values of Scrabble Tiles</b></p>
+	</div>
+    <div id="content">
+      <h1><b>Notable Eclectic Ephemera</b></h1>
       <p><b>Axolotls</b></p>
-      <p>The axolotl (<i>Ambystoma mexicana</i>) is a neotenic salamander perhaps best known for its distinctive mane of feathery external gills.  "Neoteny" refers to a lifecycle in which an animal undergoes a complete reproductive cycle without ever reaching an adult state - most axolotls live their entire lives as fully aquatic tadpoles. </p>
-      <p> Axolotls make wonderful pets.  Meet Kimiko (albino) and Huxley (wild type) <a href="axolotls.html"><b>here</b></a>.</p>
+      <p>The axolotl (<i>Ambystoma mexicana</i>) is a neotenic salamander perhaps best 
+      known for its distinctive mane of feathery external gills.  "Neoteny" refers to a 
+      lifecycle in which an animal undergoes a complete reproductive cycle without ever 
+      reaching an adult state - most axolotls live their entire lives as fully aquatic 
+      tadpoles. </p>
+      <p> Axolotls make wonderful pets.  Meet Kimiko (albino) and Huxley (wild type) 
+      <a href="axolotls.html"><b>here</b></a>.</p>
       <p> </p>
       <p><b>University of Chicago Scavenger Hunt</b></p>
-      <p>I am a proud alumnus ("Judge emeritus") of the organization that runs the <a href="http://scavhunt.uchicago.edu/">University of Chicago Scavenger Hunt</a>.  The University of Chicago Scavenger Hunt ("Scav") is an annual event that lasts four days each May.  Each year's List of Items features several hundred weird and esoteric activities.  Examples of past items: A replica of the chess-playing "automaton" The Mechanical Turk; <a href="../images/Googlywoogly.jpeg">affixing enormous googly eyes to campus buildings</a>; a zeusaphone (singing tesla coil); a Stradivarius violin, cello, or viola; an elephant; a lion, a tiger, or a bear (we saw the lion and the tiger, but the bear wasn't available because, in the words of the handlers, "it was Mother's Day weekend.").  In 2011, The University of Chicago Scavenger Hunt was anointed the World's Largest Scavenger Hunt (proof <a href="../images/guinness.jpeg"><b>here</b></a>) by the Guinness Book of World Records.  In actuality, our induction into the GBWR followed a single hour-long event that was a mere footnote in the four-day-long extravaganza of searching for and making things.  (The GBWR title has since been claimed by someone else.) </p>
+      <p>I am a proud alumnus ("Judge emeritus") of the organization that runs the 
+      <a href="http://scavhunt.uchicago.edu/">University of Chicago Scavenger Hunt</a>.  
+      The University of Chicago Scavenger Hunt ("Scav") is an annual event that lasts four 
+      days each May.  Each year's List of Items features several hundred weird and esoteric 
+      activities.  Examples of past items: A replica of the chess-playing "automaton" The 
+      Mechanical Turk; <a href="../images/Googlywoogly.jpeg">affixing enormous googly eyes 
+      to campus buildings</a>; a zeusaphone (singing tesla coil); a Stradivarius violin, 
+      cello, or viola.  In 2011, The University of Chicago Scavenger Hunt was anointed the 
+      World's Largest Scavenger Hunt (proof <a href="../images/guinness.jpeg" target="_blank">
+      <b>here</b></a>) by the Guinness Book of World Records.  In actuality, our induction 
+      into the GBWR followed a single hour-long event that was a mere footnote in the 
+      four-day-long extravaganza of searching for and making things.  (The GBWR title has 
+      since been claimed by someone else.) </p>
     </div>
     <div id="column">
       <div class="holder">             
