--- a/pages/research.html
+++ b/pages/research.html
@@ -32,19 +32,22 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="topnav">
       <ul>
         <li><a href="../index.html">About Me</a></li>
-        <li><a class="active" href="research.html">Projects</a></li>
+        <li><a class="active" href="research.html">Research</a>
+          <ul>
+            <li><a href="#dynamics">Dynamical Processes on Networks</a></li>
+            <li><a href="#structure">Structural Analysis of Networks</a></li>
+          </ul>
+        </li>
         <li><a href="teaching.html">Teaching</a></li>
         <li><a href="other.html">Other</a></li>
     </div>
   </div>
 </div>
 
-
-
 <div class="wrapper col4">
   <div id="container">
 
-    <h1><b>Dynamical Processes on Networks</b></h1>
+    <h1 id="dynamics"><b>Dynamical Processes on Networks</b></h1>
     
     <p><b>Network Heterogeneity and Spontaneous Extinction of Endemic Disease</b></p>
     <p>Numerous studies have suggested that the structure of the contact network in a 
@@ -105,7 +108,7 @@ Licence URI: http://www.os-templates.com/template-terms
     </ul>
 
 
-    <h1><b>Structural Analysis of Networks</b></h1>
+    <h1 id="structure"><b>Structural Analysis of Networks</b></h1>
 
     <p><b>Network Assembly of Scientific Collaborations</b></p>
     <div class = "imgholder">
@@ -182,7 +185,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 
     <h1><b>Side Projects</b></h1>
-	<p> Coming soon -> link to other </p>
+	<p><a href="other.html#sideprojects">A few other projects</a>, analyzing and visualizing data.</p>
   </div>
 </div>
 
