--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@ Licence URI: http://www.os-templates.com/template-terms
       <div id="topnav">
         <ul>
           <li><a class="active" href="index.html">About Me</a></li>
-          <li><a href="pages/research.html">Projects</a></li>
+          <li><a href="pages/research.html">Research</a>
+            <ul>
+              <li><a href="pages/research.html#dynamics">Dynamical Processes on Networks</a></li>
+              <li><a href="pages/research.html#structure">Structural Analysis of Networks</a></li>
+            </ul>
+          </li>
           <li><a href="pages/teaching.html">Teaching</a></li>
           <li><a href="pages/other.html">Other</a></li>
         </ul>
