--- a/pages/axolotls.html
+++ b/pages/axolotls.html
@@ -32,7 +32,12 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="topnav">
       <ul>
         <li><a href="../index.html">About Me</a></li>
-        <li><a href="research.html">Projects</a></li>
+        <li><a href="research.html">Research</a>
+          <ul>
+            <li><a href="research.html#dynamics">Dynamical Processes on Networks</a></li>
+            <li><a href="research.html#structure">Structural Analysis of Networks</a></li>
+          </ul>
+        </li>
         <li><a href="teaching.html">Teaching</a></li>
         <li><a class="active" href="other.html">Other</a></li>
     </div>
@@ -42,9 +47,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper col2">
   <div id="breadcrumb">
     <ul>
-      <li class="first">You Are Here</li>
-      <li>&#187;</li>
-      <li><a href="../index.html">Home</a></li>
+      <li class="first"><a href="../index.html">Home</a></li>
       <li>&#187;</li>
       <li><a href="other.html">Other</a></li>
       <li>&#187;</li>
