--- a/pages/teaching.html
+++ b/pages/teaching.html
@@ -34,7 +34,12 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="topnav">
       <ul>
         <li><a href="../index.html">About Me</a></li>
-        <li><a href="research.html">Projects</a></li>
+        <li><a href="research.html">Research</a>
+          <ul>
+            <li><a href="research.html#dynamics">Dynamical Processes on Networks</a></li>
+            <li><a href="research.html#structure">Structural Analysis of Networks</a></li>
+          </ul>
+        </li>
         <li><a class="active" href="teaching.html">Teaching</a></li>
         <li><a href="other.html">Other</a></li>
     </div>
